PlanningDetails fixed map not showing

--- a/src/app/main/planning/planning-item/planning-item.component.scss
+++ b/src/app/main/planning/planning-item/planning-item.component.scss
@@ -15,11 +15,15 @@ h1 {
 
     .header{
         min-width:120px;
-        border: 1px solid rgb(48, 82, 141);;
+        
         padding: 0 8px 0 8px;
         margin: 4px;
         border-radius: 5px;
         color: lightgrey;
+
+        .with_border {
+            border: 1px solid rgb(48, 82, 141);
+        }
 
         ion-item {
             --padding-end: 0px;
